--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".Main"
-    >
+    android:background="#FFFFFFFF"
+    android:clickable="false">
 
     <ListView
         android:layout_width="wrap_content"
