--- a/app/src/main/res/layout/elemento.xml
+++ b/app/src/main/res/layout/elemento.xml
@@ -35,14 +35,14 @@
         android:text="Pronador, asfalto"
         android:id="@+id/tvCaracteristicas"
         android:layout_toRightOf="@+id/ivMarca"
-        android:layout_toEndOf="@+id/ivMarca"
         android:textSize="16sp"
         android:layout_marginLeft="10dp"
-        android:layout_alignRight="@+id/tvModelo"
         android:layout_alignEnd="@+id/tvModelo"
         android:gravity="center_vertical"
         android:layout_above="@+id/textView3"
-        android:layout_below="@+id/tvModelo" />
+        android:layout_below="@+id/tvModelo"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp" />
 
     <TextView
         android:layout_width="wrap_content"
